@@ -1,3 +1,8 @@
+2008-03-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover.pm (buildConfig):
+	New discovery parameter: include-files
+
 2008-01-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/JunOS.pm: Added interface filter to
